# django-practice

./: README.md  pyproject.toml
django_practice/: settings.py
studies/: assets.py  batch_tasks.py  models.py  serializers.py
studies/management/commands/: save_studies.py
studies/migrations/: 0001_initial.py  0002_remove_eligibility_gender_based_and_more.py  0003_alter_eligibility_study_alter_intervention_study.py  0004_alter_condition_name_alter_eligibility_criteria_and_more.py  0005_alter_intervention_description.py  0006_alter_study_title.py  0007_configurationvariable.py  0008_condition_locale_condition_original_condition_and_more.py  0009_alter_condition_name_alter_eligibility_gender_and_more.py  0010_study_control_status_type_study_original_data.py  0011_study_original_data_hash.py  0012_alter_study_unique_together_and_more.py
