[tool.poetry]
name = "django_practice"
version = "0.1.0"
description = ""
authors = ["root-kjh <wldnro3141@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.6"
requests = "^2.28.2"
djangorestframework = "^3.14.0"
tqdm = "^4.64.1"
django-crontab = "^0.7.1"
translate = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
